--- a/user/News.html
+++ b/user/News.html
@@ -26,7 +26,8 @@
             font-family: 'Sukhumvit Set', 'Kanit', sans-serif; /* ฟอนต์หลักของเว็บไซต์ */
             margin: 0;
             padding: 0;
-            background: var(--bg-light); /* สีพื้นหลังเริ่มต้น */
+            /* เปลี่ยนพื้นหลังให้เป็นการไล่ระดับสี */
+            background: linear-gradient(135deg, #e0f7fa 0%, #ffebee 100%); /* ฟ้าอ่อนไปชมพูอ่อน */
             color: var(--text-dark); /* สีข้อความเริ่มต้น */
             line-height: 1.6; /* ระยะห่างบรรทัด */
             box-sizing: border-box; /* ทำให้ padding และ border ไม่เพิ่มขนาดของ element */
@@ -202,7 +203,7 @@
         /* ========== Main News Section - ส่วนเนื้อหาข่าวสารหลัก ========== */
         .news-section {
             padding: 80px 0; /* padding ด้านบนและล่าง */
-            background: var(--bg-light); /* สีพื้นหลัง */
+            /* ลบ background-color ออก เพื่อให้เห็น background ของ body */
         }
 
         .news-heading {
