--- a/user/Psychologist.html
+++ b/user/Psychologist.html
@@ -26,7 +26,8 @@
             font-family: 'Sukhumvit Set', 'Kanit', sans-serif; /* ฟอนต์หลักของเว็บไซต์ */
             margin: 0;
             padding: 0;
-            background: var(--bg-light); /* สีพื้นหลังเริ่มต้น */
+            /* เปลี่ยนพื้นหลังให้เป็นการไล่ระดับสีที่อ่อนลง */
+            background: linear-gradient(135deg, #e0f7fa 0%, #ffebee 100%); /* ฟ้าอ่อนมากไปชมพูอ่อนมาก */
             color: var(--text-dark); /* สีข้อความเริ่มต้น */
             line-height: 1.6; /* ระยะห่างบรรทัด */
             box-sizing: border-box; /* ทำให้ padding และ border ไม่เพิ่มขนาดของ element */
@@ -202,7 +203,7 @@
         /* ========== Psychologist Selection Section ========== */
         .psychologist-selection-section {
             padding: 80px 0;
-            background: var(--bg-light);
+            /* พื้นหลังถูกกำหนดใน body แล้ว */
         }
 
         .selection-heading {
