--- a/user/appointment-booking.html
+++ b/user/appointment-booking.html
@@ -29,7 +29,7 @@
             font-family: 'Sukhumvit Set', 'Kanit', sans-serif; /* ฟอนต์หลักของเว็บไซต์ */
             margin: 0;
             padding: 0;
-            background: var(--bg-light); /* สีพื้นหลังเริ่มต้น */
+            background: linear-gradient(135deg, #e0f7fa 0%, #ffebee 100%);
             color: var(--text-dark); /* สีข้อความเริ่มต้น */
             line-height: 1.6; /* ระยะห่างบรรทัด */
             box-sizing: border-box; /* ทำให้ padding และ border ไม่เพิ่มขนาดของ element */
