--- a/psychologist/confirmed_data.html
+++ b/psychologist/confirmed_data.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LRU HeartCare | จัดการคำขอคำปรึกษา</title>
+    <title>LRU HeartCare | การนัดหมาย</title>
     <!-- Google Fonts: Kanit for Thai text -->
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700;800&display=swap" rel="stylesheet">
     <!-- Bootstrap Icons for a wide range of icons -->
@@ -639,7 +639,7 @@
             <h5>LRU HeartCare</h5>
             <ul>
                 <li><a href="psychologist-dashboard.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
-                <li><a href="#" class="active"><i class="bi bi-bell"></i> คำขอคำปรึกษา</a></li>
+                <li><a href="#" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
                 <li><a href="#"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
                 <li><a href="#"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
