--- a/user/index.html
+++ b/user/index.html
@@ -566,7 +566,7 @@
             <ul class="menu">
               <li><a href="index.html">หน้าแรก</a></li>
               <li><a href="News.html">ข่าวสาร</a></li>
-              <li><a href="Psychologist.html">เลือกนักจิตวิยา</a></li>
+              <li><a href="Psychologist.html">เลือกนักจิตวิทยา</a></li>
               <li class="dropdown">
                 <div class="dropdown-toggle">ข้อมูลการนัดหมาย <span class="arrow">▼</span></div>
                 <ul class="dropdown-menu">
