--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -692,8 +692,10 @@
                     <img src="https://placehold.co/38x38/FFC0CB/4682B4?text=PS" alt="Avatar"> <!-- Placeholder image with PS text for Psychologist -->
                     <strong>นักจิตวิทยา</strong>
                     <ul class="user-dropdown-menu">
-                        <li><a href="#">โปรไฟล์</a></li>
-                        <li><a href="#">ออกจากระบบ</a></li>
+                        <li><a href="Homepage.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                        <li><a href="#"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                        <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
+                        
                     </ul>
                 </div>
             </nav>
