--- a/user/News-Detail.html
+++ b/user/News-Detail.html
@@ -425,6 +425,7 @@
             <ul class="menu">
               <li><a href="index.html">หน้าแรก</a></li>
               <li><a href="News.html">ข่าวสาร</a></li>
+              <li><a href="index.html" id="openQuickAssessment">แบบประเมินสุขภาพใจ</a></li> 
               <li><a href="Psychologist.html">เลือกนักจิตวิยา</a></li>
               <li class="dropdown">
                 <div class="dropdown-toggle">ข้อมูลการนัดหมาย <span class="arrow">▼</span></div>
