--- a/user/Viewinfo.html
+++ b/user/Viewinfo.html
@@ -964,6 +964,7 @@
             <ul class="menu">
               <li><a href="index.html">หน้าแรก</a></li>
               <li><a href="News.html">ข่าวสาร</a></li>
+              <li><a href="index.html" id="openQuickAssessment">แบบประเมินสุขภาพใจ</a></li> 
               <li><a href="Psychologist.html">เลือกนักจิตวิยา</a></li>
               <!-- Dropdown สำหรับข้อมูลการนัดหมาย -->
               <li class="dropdown">
