--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -677,10 +677,10 @@
         <div class="sidebar">
             <h5>LRU HeartCare</h5>
             <ul>
-                <li><a href="#" class="active"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
-                <li><a href="#"><i class="bi bi-calendar-check"></i> การนัดหมาย</a></li>
-                <li><a href="#"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
-                <li><a href="#"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
+                <li><a href="confirmed_data.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
+                <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
         </div>
         <!-- Main Content Area -->
