--- a/psychologist/eiei.html
+++ b/psychologist/eiei.html
@@ -501,12 +501,10 @@
     <div class="dashboard-container">
         <div class="sidebar">
             <h5>LRU HeartCare</h5>
-            <a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าแรก</a>
-            <a href="manage_patients.html" class="active"><i class="bi bi-calendar-check"></i> ข้อมูลการนัดหมาย</a>
-            <a href="online_chat.html"><i class="bi bi-chat-dots"></i> แชทออนไลน์</a>
-            <a href="professional_development.html"><i class="bi bi-journal-check"></i> พัฒนาวิชาชีพ</a>
-            <a href="settings.html"><i class="bi bi-gear-fill"></i> ตั้งค่าโปรไฟล์</a>
-            <a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
+            <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
+                <li><a href="confirmed_data.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
+                <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
         </div>
 
         <div class="main-content">
