--- a/psychologist/pending_data.html
+++ b/psychologist/pending_data.html
@@ -427,8 +427,8 @@
             <h5>LRU HeartCare</h5>
             <ul>
                 <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
-                <li><a href="appointments.html" class="active"><i class="bi bi-calendar-check"></i> การนัดหมาย</a></li>
-                <li><a href="online_chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
+                <li><a href="confirmed_data.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
                 <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
         </div>
