--- a/psychologist/student-info.html
+++ b/psychologist/student-info.html
@@ -533,13 +533,12 @@
     <div class="dashboard-container">
         <!-- Sidebar Navigation -->
         <div class="sidebar">
-            <h5>LRU HeartCare</h5>
-            <ul>
-                <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
-                <li><a href="confirmed_data.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                <h5>LRU HeartCare</h5>
+            <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
+                <li><a href="eiei.html" class="active"><i class="bi bi-bell"></i> การนัดหมาย</a></li>
+                <li><a href="confirmed_data.html" ><i class="bi bi-bell"></i> การนัดหมายทั้งหมด</a></li>
                 <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
                 <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
-            </ul>
         </div>
         <!-- Main Content Area -->
         <div class="main-content">
