--- a/psychologist/chat.html
+++ b/psychologist/chat.html
@@ -627,7 +627,7 @@
                 <li><a href="eiei.html" ><i class="bi bi-bell"></i> การนัดหมาย</a></li>
                 <li><a href="confirmed_data.html" ><i class="bi bi-bell"></i> การนัดหมายทั้งหมด</a></li>
                 <li><a href="chat.html" class="active"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
-                <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
         </div>
         <!-- Main Content Area -->
         <div class="main-content">
