--- a/user/Login.html
+++ b/user/Login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <meta http-equiv="refresh" content="0; url=user/login.html" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LRU HeartCare | เข้าสู่ระบบ</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&family=Sukhumvit+Set:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta http-equiv="refresh" content="0; url=login.html" />
+
     <style>
         /* ========== Variables - ตัวแปรสีและเงา ========== */
         :root {
