--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -677,8 +677,8 @@
         <div class="sidebar">
                 <h5>LRU HeartCare</h5>
             <li><a href="Homepage.html"class="active"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
-                <li><a href="eiei.html" ><i class="bi bi-bell"></i> การนัดหมาย</a></li>
-                <li><a href="confirmed_data.html" ><i class="bi bi-bell"></i> การนัดหมายทั้งหมด</a></li>
+                <li><a href="eiei.html" ><i class="bi bi-bell"></i>จัดการข้อมูลการนัดหมาย</a></li>
+                <li><a href="confirmed_data.html" ><i class="bi bi-bell"></i>การนัดหมายทั้งหมด</a></li>
                 <li><a href="chat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a></li>
                 <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
         </div>
