--- a/user/index.html
+++ b/user/index.html
@@ -730,6 +730,6 @@
             </div>
         </div>
     </div>
-
+<!-- <meta http-equiv="refresh" content="5; url=/Psychological/user/Login.html/"> -->
 </body>
 </html>
